add : air lib, fix : cors issues
